--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/e1292bce9c.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Anura Finance</title>
+    <title>Roasted Chiknz</title>
     <script type="text/javascript">
     </script>
   </head>
